     suggestion. The default can be changed globally; e.g, options(datatable.integer64="character")
     
  o  fread's drop, select and NULL in colClasses are implemented. To drop or select columns by name
     or by number. See examples in ?fread.
     
  o  fread now detects T,F,True,False,TRUE and FALSE as type logical, consistent with read.csv.
  
  o  fread("1.46761e-313\n") detected the ERANGE error, so read as character. It now reads as
     numeric but with a detailed warning. Thanks to Heather Turner for the detailed report, #4879.
	 
  o	 as.data.table method for table() implemented, #4848. Thanks to Frank Pinter for suggesting here on SO:
       http://stackoverflow.com/questions/18390947/data-table-of-table-is-very-different-from-data-frame-of-table
  
  o  as.data.table methods added for integer, numeric, character, logical, factor, ordered and Date.
	 
  o	 Due to fixing #2697 (see BUG FIXES), `:=`, assignment by reference, also now accepts negative 
     indices, but still not '0' as an index. Thanks again to Eduard Antonyan.

  o	 `set()` is able to add new columns by reference now. For example, set(DT, i=3:5, j="bla", 5L) is 
     equivalent to DT[3:5, bla := 5L]. This was FR #2077. Tests added.
	 
  o  fread now understand commands, e.g. fread("grep blah file.txt").

  o  can set key from `[.data.table` using a new "key" argument. This is for convenience and to
     address FR #4675 to some degree - the difference from the FR is that the key is not set temporarily
     but rather is a permanent change.

  o  FR #4677 has been addressed - eval will now be evaluated anywhere in a j-expression as long as
     it has just one argument. Will still need to use .SD as environment in complex cases. Accidentally
     fixed bug noticed here: http://stackoverflow.com/a/19054962/817778

  o  FR #4650 addressed. The ! at the head of the expression will no longer trigger a not-join if the 